--- a/Debate.html
+++ b/Debate.html
@@ -28,7 +28,10 @@
     </ul>
   </nav>
 
-  <div class="gradiant_1"></div>
+ <div class="text_box_2">
+Fred has had quite the debate career. He is currently Captain of the EPS speech team and will be attending nationals
+in Des Moine, Iowa starting June 15th.
+</div>
  
 
 <section>
@@ -62,7 +65,7 @@
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="images/IMG_5343.webp" alt="state_Debate"
+        <img src="images/Screenshot 2025-06-08 134937.png" alt="state_Debate"
         style="width:100%; height: 100%;">
       </div>
       <div class="flip-card-back">
