--- a/about.html
+++ b/about.html
@@ -27,9 +27,15 @@
       <li><a  class="active"href="About.html">FAQ</a></li>
     </ul>
   </nav>
-
-  <div class="gradiant_1"></div>
  
+
+<div class="text_box_2">
+Frequently asked questions about Fred
+</div>
+
+       <div class="text_box_2">
+Fred doesn't really know what to add here for content so hopefully this is interesting
+</div>
 
 <section>
   <div class="flip-section">
@@ -48,7 +54,7 @@
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="images/EPS10FB.jpg" alt="EPS_Logo"
+        <img src="images/EPS.jpg" alt="EPS_Logo"
         style="width:100%; height: 100%;">
       </div>
       <div class="flip-card-back">
@@ -61,27 +67,26 @@
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="images/IMG_5343.webp" alt="state_Debate"
+        <img src="images/Lightning_McQueen.png" alt="Ligthning McQueen"
         style="width:100%; height: 100%;">
       </div>
       <div class="flip-card-back">
-        EPS debate co-champs Alex and Audredy with EPS debate co-champs Cyrus and Fred
+        Fred's favorite animated movie is cars
       </div>
     </div>
   </div>
   <div class="flip-box">
     <div class="flip-box-inner">
       <div class="flip-box-front">
-        Public Forum
+        Contacting Fred
       </div>
       <div class="flip-box-back">
-        Last year, Fred succesfully competed in novice Public forum, co-champing one tournament, advanced to finals in the other, and winning
-        the best speaker award in both. This year, with his partner Cyrus Oomen, Fred co-champed states and qualified for the prestigious
-        Tournament of Champions. Fred also placed second best speaker in the state of Washington.
+      As of right now, Fred doesn't have any personal social media accounts set up, please email him at fcoddon@eastsideprep.org
       </div>
     </div>
   </div>
 </div>
+
 
 </section>
 
