--- a/Hobies.html
+++ b/Hobies.html
@@ -53,7 +53,7 @@ This page provides a brief window into Fred's hobbies
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="images/lego.png" alt="lego logo"
+        <img src="images/lego_logo.png" alt="lego logo"
         style="width:100%; height: 100%;">
       </div>
       <div class="flip-card-back">
@@ -76,7 +76,7 @@ This page provides a brief window into Fred's hobbies
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="images/Racing_Simulators.webp" alt="racing sim"
+        <img src="images/sim_racing.webp" alt="racing sim"
            style="width:100%; height: 100%;">
       </div>
       <div class="flip-card-back">
