--- a/Web_Design.html
+++ b/Web_Design.html
@@ -65,7 +65,7 @@ This page includes various milestones in Freds Coding Career
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="images/html.jpg" alt="html logo"
+        <img src="images/html.png" alt="html logo"
            style="width:100%; height: 100%;">
       </div>
       <div class="flip-card-back">
