--- a/Hobies.html
+++ b/Hobies.html
@@ -24,7 +24,7 @@
       <li><a class="active" href="Hobies.html">Hobbies</a></li>
       <li><a href=Web_Design.html>Web Design</a></li>
       <li><a href="Debate.html">Debate</a></li>
-      <li><a href="About.html">FAQ</a></li>
+      <li><a href="about.html">FAQ</a></li>
     </ul>
   </nav>
 
